test/zinc_source/compile_errors/annotations/05_callable_exact_mismatch.zn
// expected-error: parameter 'f' expects a compatible '\(i32\)->i32' value
fn apply(f: (i32)->i32) {
    return f(1)
}

fn inc64(x: i64) {
    return x + 1
}

fn main() {
    print(apply(inc64))
}
